# TB5-WaLI

./: .gitignore  README.md
config/: README.md  TurtleBot4_On_RPi5_Setup.md  bkup_orig_republisher.yaml.sh  bkup_orig_rplidar_launch.sh  bkup_orig_turtlebot4_description_urdf.sh  bkup_orig_turtlebot4_nav2_yaml.sh  bkup_orig_turtlebot4_navigation_config_localization_yaml.sh  bkup_orig_turtlebot4_yaml.sh  boot.firmware.cmdline.txt  boot.firmware.config.txt  boot.firmware.config.txt.b4setup  crontab-e  diff_installed_with_modified_files.sh  diff_installed_with_orig_files.sh  download_and_run_turtlebot4_setup.sh  install_gamepad_param_files.sh  install_params_wali_nav2_yaml.sh  install_republisher.yaml.sh  install_rplidar_launch.sh  install_turtlebot4_description_urdf.sh  install_turtlebot4_navigation_config_localization_yaml.sh  install_turtlebot4_yaml.sh  turtlebot4.urdf.xacro  turtlebot4.yaml
docs/: Batteries.md  Costmap_Filter_Notes.md  Logitech_F710_controller.README.md  My_TurtleBot4_History.md  Nav2_Notes.md  SLAM_Notes.md  TB4_Cartographer.md
logs/: README.md  save_logs.sh
plib/: cleanlifelog.py  lifeLog.py  loglife.py
utils/: logMaintenance.py  nohup_loglife.sh  totallife.sh
wali_ws/: clean.sh  clean_roslogs_older_than_30_days.sh  cpu_watch.sh  cycle_tb4_service.sh  monitor.sh  no-osiris-test.py  nohup_wali.sh  osiris-test.py  procs.sh  rebuild.sh  shutdown.sh  (+8 more)
wali_ws/src/kaiaai/: README.md  README_WAVEFRONT_EXPLORE.md  package.xml  setup.cfg  setup.py
wali_ws/src/kaiaai/kaiaai/: cli.py  config.py  util.py
wali_ws/src/kaiaai/kaiaai/explore/: wfd.py
(+440 files in other folders)
